Fri May 29 11:18:58 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal,
	  bsock_recvmsg_internal):
	  avoid redundant fcntl on Linux
	  [ruby-core:69154] [Feature #11145]
	* ext/socket/init.c (rsock_s_recvfrom_nonblock): ditto
	* ext/socket/rubysocket.h (MSG_DONTWAIT_RELIABLE): new macro

Fri May 29 10:30:34 2015  Eric Wong  <e@80x24.org>

	* lib/net/resolv.rb (request): use monotonic clock
	* lib/net/http.rb (begin_transport, end_transport): ditto
	  [ruby-core:69384] [Feature #11124]

Fri May 29 04:37:38 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add two methods to debug internals.

	  * ObjectSpace.internal_class_of: return RBASIC_CLASS(obj).
	  * ObjectSpace.internal_super_of: return RCLASS_SUPER(cls).

	* NEWS: add information about both methods.

	* test/objspace/test_objspace.rb: add tests for both methods.

Thu May 28 06:55:53 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* ext/tk/sample/figmemo_sample.rb (open_file),
	  ext/tk/sample/tktextio.rb (TkTextIO): fix typo in messages.
	  [Fix GH-916]

Wed May 27 09:50:51 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): use RB_GC_GUARD instead of volatile
	  [ruby-core:69371] [Bug #11185]

Wed May 27 09:27:30 2015  Eric Wong  <e@80x24.org>

	* lib/drb/drb.rb (set_sockopt): remove redundant fcntl call
	* lib/drb/unix.rb (set_sockopt): ditto
	  [ruby-core:69128] [Feature #11137]

Tue May 26 22:10:43 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (rb_alias): should resolve refined methods.
	  [ruby-core:69360] [Bug #11182]

Tue May 26 21:35:13 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/defines.h (RUBY_ATTR_ALLOC_SIZE): fix condition.

Mon May 25 22:35:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): after the relations is changed,
	  @changesets is no longer right.
